--- a/Templates/meltingrabbit.com/2018022501/main.tex
+++ b/Templates/meltingrabbit.com/2018022501/main.tex
@@ -40,7 +40,7 @@
     \centering
     \iffigure
     \rule{50mm}{30mm}
-    % \includegraphics[width=50mm]{./img/hoge.pdf}
+    \includegraphics[width=50mm]{./img/hoge.pdf}
     \fi
     \captionsetup{type=figure}
     \caption{``Hoge'' イメージ図}
@@ -70,7 +70,7 @@
     \centering
     \iffigure
     \rule{50mm}{30mm}
-    % \includegraphics[width=50mm]{./img/hoge.pdf}
+    \includegraphics[width=50mm]{./img/hoge.pdf}
     \fi
     \captionsetup{type=figure}
     \caption{大きな図}
@@ -80,14 +80,14 @@
         \centering
         \iffigure
         \rule{35mm}{30mm}
-        % \includegraphics[width=30mm]{./img/hoge.pdf}
+        \includegraphics[width=30mm]{./img/hoge.pdf}
         \fi
     \end{minipage}
     \begin{minipage}{0.49\hsize}
         \centering
         \iffigure
         \rule{35mm}{30mm}
-        % \includegraphics[width=30mm]{./img/hoge.pdf}
+        \includegraphics[width=30mm]{./img/hoge.pdf}
         \fi
     \end{minipage}
     \captionsetup{type=figure}
@@ -98,14 +98,14 @@
         \centering
         \iffigure
         \rule{35mm}{30mm}
-        % \includegraphics[width=30mm]{./img/hoge.pdf}
+        \includegraphics[width=30mm]{./img/hoge.pdf}
         \fi
     \end{minipage}
     \begin{minipage}{0.49\hsize}
         \centering
         \iffigure
         \rule{35mm}{30mm}
-        % \includegraphics[width=30mm]{./img/hoge.pdf}
+        \includegraphics[width=30mm]{./img/hoge.pdf}
         \fi
     \end{minipage}
     \captionsetup{type=figure}
