--- a/test.tex
+++ b/test.tex
@@ -2,7 +2,7 @@
 \usepackage{luatexja}
 
 \title{坊っちゃん on Lua\TeX-ja}
-\author{YA-androidapp\thanks{https://github.com/YA-androidapp}}
+\author{YA-androidapp\thanks{https://github.com/yzkn}}
 \date{2023年6月21日}
 
 \begin{document}
